@@ -18,6 +18,9 @@ libmemwatch_la_SOURCES = \
         memwatch.c memwatch.h
 endif
 
+MAINTAINERCLEANFILES = \
+	Makefile.in
+
 distclean: clean
 	/bin/rm -f config.h
 	/bin/rm -f types.h
